--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <form id='form'>
       <h1 id='instructions'>ask a question</h1>
       <input name='question' placeholder='question' id='question'>
-      <input name='source' type='hidden' value='codecademy'>
+      <input name='source' type='hidden' value='github'>
       <input name='key' placeholder='identification key (for registered users)' id='idkey'>
       <input type='submit' value='ask' id='submit'>
     </form>
