--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       font-weight:normal;
       font-size:18px;
       color:#777;
+      word-wrap: break-word;
     }
     .QAquestionDate{
       font-size:16px;
@@ -93,6 +94,7 @@
       margin-top:6px;
       font-size:16px;
       color:#000;
+      word-wrap: break-word;
     }
   </style>
 
